fixed priskort alignment & hierarki

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -38,7 +38,7 @@
     color: #fff;
   }
   td {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: #fff;
   }
 
